--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <title>navbar</title>
 </head>
 <body>
-    
+    <header class="header">
+        <h1 class="logo-name">Digishow</h1>
+        <div class="navbar">
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">support</a></li>
+                </ul>
+            </nav>
+            <a href="#" class="logo">
+                <img src="./img/logo-social.png" alt="logo" width="50px">
+            </a>
+        </div>
+    </header>
+    <div class="main">
+        <aside>
+            <p>Lorem ipsum dolor sit.</p>
+        </aside>
+        <main>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </main>
+    </div>
 </body>
 </html>
