--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
     <link rel="shortcut icon" href="./icon/icon.ico" type="image/x-icon">
-    <title>navbar</title>
+    <title>Website</title>
 </head>
 <body>
     <header class="header">
