--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
                 </ul>
             </nav>
             <a href="#" class="logo">
-                <img src="./img/logo-social.png" alt="logo" width="50px">
+                <img src="./logo/logo-social.png" alt="logo" width="50px">
             </a>
         </div>
     </header>
     <div class="main">
         <aside>
-            <p>Lorem ipsum dolor sit.</p>
+            <h2 class="header_camera">What is a Camera?</h2>
+            <p class="header_p_camera">A camera is an optical instrument that captures images. Most cameras can capture 2D images, while some more advanced models can capture 3D images. At a basic level, most cameras consist of a sealed box (the camera body), with a small hole (the aperture) that allows light to pass through and capture an image on a light-sensitive surface (usually a digital sensor or photographic film). Cameras have various mechanisms to control how light falls onto the light-sensitive surface, including lenses that focus the light and a shutter that determines the amount of time the photosensitive surface is exposed to the light.</p>
+            <a href="#" class="header_img_camera"><img src="./img/camera.webp" alt="camera"></a>
         </aside>
         <main>
             <p>Lorem ipsum dolor sit amet.</p>
