--- a/index.html
+++ b/index.html
@@ -26,12 +26,26 @@
     </header>
     <div class="main">
         <aside>
-            <h2 class="header_camera">What is a Camera?</h2>
-            <p class="header_p_camera">A camera is an optical instrument that captures images. Most cameras can capture 2D images, while some more advanced models can capture 3D images. At a basic level, most cameras consist of a sealed box (the camera body), with a small hole (the aperture) that allows light to pass through and capture an image on a light-sensitive surface (usually a digital sensor or photographic film). Cameras have various mechanisms to control how light falls onto the light-sensitive surface, including lenses that focus the light and a shutter that determines the amount of time the photosensitive surface is exposed to the light.</p>
-            <a href="#" class="header_img_camera"><img src="./img/camera.webp" alt="camera"></a>
+            <div class="camera">
+                <h2 class="header_camera">What is a Camera?</h2>
+                <p class="p_camera">A camera is an optical instrument that captures images. Most cameras can capture 2D images, while some more advanced models can capture 3D images. At a basic level, most cameras consist of a sealed box (the camera body), with a small hole (the aperture) that allows light to pass through and capture an image on a light-sensitive surface (usually a digital sensor or photographic film).</p>
+                <a href="https://en.wikipedia.org/wiki/Camera" ><img class="img_camera" src="./img/camera.webp" alt="camera"></a>
+            </div>
         </aside>
         <main>
-            <p>Lorem ipsum dolor sit amet.</p>
+            <div class="container">
+                <ul>
+                    <li><a href="#"><img class="img-main" src="./img/1.webp" alt="Camera"></a></li>
+                    <li><a href="#"><img class="img-main" src="./img/2.webp" alt="Camera"></a></li>
+                    <li><a href="#"><img class="img-main" src="./img/3.webp" alt="Camera"></a></li>
+                    <li><a href="#"><img class="img-main" src="./img/4.webp" alt="Camera"></a></li>
+                    <li><a href="#"><img class="img-main" src="./img/5.webp" alt="Camera"></a></li>
+                    <li><a href="#"><img class="img-main" src="./img/6.webp" alt="Camera"></a></li>
+                    <li><a href="#"><img class="img-main" src="./img/7.webp" alt="Camera"></a></li>
+                    <li><a href="#"><img class="img-main" src="./img/8.webp" alt="Camera"></a></li>
+                    <li><a href="#"><img class="img-main" src="./img/9.webp" alt="Camera"></a></li>
+                </ul>
+            </div>
         </main>
     </div>
 </body>
