--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
                 <p class="p_camera">A camera is an optical instrument that captures images. Most cameras can capture 2D images, while some more advanced models can capture 3D images. At a basic level, most cameras consist of a sealed box (the camera body), with a small hole (the aperture) that allows light to pass through and capture an image on a light-sensitive surface (usually a digital sensor or photographic film).</p>
                 <a href="https://en.wikipedia.org/wiki/Camera" ><img class="img_camera" src="./img/camera.webp" alt="camera"></a>
             </div>
+            <div class="img-media">
+                <ul>
+                    <li><a href="#"><img class="img-social" src="./img/social-media-image/instagram.webp" alt="instagram"></a></li>
+                    <li><a href="#"><img class="img-social" src="./img/social-media-image/facebook.webp" alt="Facebook"></a></li>
+                    <li><a href="#"><img class="img-social" src="./img/social-media-image/twitter.webp" alt="Twitter"></a></li>
+                </ul>
+            </div>
         </aside>
         <main>
             <div class="container">
